<resources>
    <string name="app_name">RomoCenter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Romo Center</string>
    <string name="title_peta">Peta Relawan</string>
    <string name="title_kegiatan">Kegiatan</string>
    <string name="title_kopi_darat">Kopi Darat</string>
    <string name="title_masjid">Masjid</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_survei">Survei</string>
    <string name="title_aspirasi">Aspirasi</string>
    <string name="title_jaringan">Jaringan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">NIK</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">NIK anda tidak valid</string>
    <string name="error_invalid_password">Password terlalu pendek</string>
    <string name="error_incorrect_password">Password salah</string>
    <string name="error_field_required">Field ini wajib diisi</string>
    <string name="permission_rationale">"NIK dibutuhkan untuk login."
    </string>
    <string name="title_activity_posko">PoskoActivity</string>
    <string name="title_activity_posko_maps">Map</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
